1. Add long options for the full modern Unix experience. 2. Add in the (mysteriously left out) -s option, and    move the option setting for -t over to the -t option.

--- a/secho.1
+++ b/secho.1
@@ -42,11 +42,11 @@ Run cmd on each argument, replacing $? with the argument itself.
 Output in decimal.
 .It Fl d Ar char
 Field delimiter. Default is end of argument.
-.It fl E
+.It Fl E
 Print to standard error instead of to standard output.
 .It Fl e
 Allow escape sequences
-.If Fl f Pa file
+.It Fl f Pa file
 Read from file, then from command line (if any).
 .It Fl i
 Read arguments from standard input.
