Typoed the manpage

--- a/secho.1
+++ b/secho.1
@@ -23,7 +23,7 @@
 outputs its arguments. It takes the following switches:
 .Bl -tag -width "-S voice"
 .It Fl 0
-Separate output arguments with a null character.
+Separate arguments with a null character.
 .It Fl 1
 One argument per line.
 .It Fl 9
