update to the latest configure.inc; set @XGETOPTS@ to options.c instead of options.o; #define <string.h> in options.c

--- a/secho.1
+++ b/secho.1
@@ -99,7 +99,7 @@ Regular expressions can use ``*''.
 Multi-column mode is not implemented.
 .Sh AUTHOR
 .An David Parsons
-.Pq Li orc@pell.chi.il.us
+.Pq Li orc@pell.portland.or.us
 (coding)
 .br
 .An Pietro Gagliardi
